# pymermaiddiagram

./: README.md  gitignore.txt  pyproject.toml
.github/workflows/: python-publish.yml
src/PyMermaid.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pymermaiddiagram/: pymermaid.py
test/: test_pymermaid.py
